css-recipes-and-layouts/fix: wrap sales

--- a/css-recipes-and-layouts/css/styles.scss
+++ b/css-recipes-and-layouts/css/styles.scss
@@ -535,6 +535,7 @@ main {
             padding-bottom: 25px;
             align-content: center;
             justify-content: center;
+            flex-wrap: wrap;
         }
 
     }
